k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: campuscare
  namespace: campuscare
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 1m
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend: { service: { name: campuscare-backend, port: { number: 5000 } } }
          - path: /
            pathType: Prefix
            backend: { service: { name: campuscare-frontend, port: { number: 80 } } }
